--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,4 +1,4 @@
-// menu Button
+// Menu Button
 .menu-btn {
   position: absolute;
   z-index: 3;
@@ -20,15 +20,15 @@
     transform: rotate(180deg);
 
     .btn-line {
-      //Line 1 - Rotate
+      // Line 1 - Rotate
       &:nth-child(1) {
         transform: rotate(45deg) translate(5px, 5px);
       }
-      //Line 2 - Hide
+      // Line 2 - Hide
       &:nth-child(2) {
         opacity: 0;
       }
-      //Line 3 - Rotate
+      // Line 3 - Rotate
       &:nth-child(3) {
         transform: rotate(-45deg) translate(7px, -6px);
       }
