--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,7 +29,7 @@ h3 {
   &.sm-heading {
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
-    background: rgba(lighten($primary_color, 2), 0.5);
+    background: rgba(lighten($primary-color, 2), 0.5);
   }
 }
 
@@ -50,7 +50,7 @@ header {
 
 main {
   padding: 4rem;
-  //height: 100%;
+  // height: 100%;
   min-height: calc(100vh - 60px);
 
   .icons {
@@ -58,10 +58,10 @@ main {
 
     a {
       padding: 0.4rem;
+      @include easeOut;
 
       &:hover {
         color: $secondary-color;
-        @include easeOut();
       }
     }
   }
