Menu hover color fixed

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -164,7 +164,7 @@ main {
   margin-bottom: 0.3rem;
   &:hover {
     background: $secondary-color;
-    color: set-text-color($primary-color);
+    color: set-text-color($secondary-color);
   }
 }
 
